--- a/src/Component/pageEmployee/seeOrder/sort/sort.module.scss
+++ b/src/Component/pageEmployee/seeOrder/sort/sort.module.scss
@@ -1,30 +1,10 @@
 .wrapper {
     display: flex;
     justify-content: space-evenly;
-    ul {
-        list-style: none;
-        display: flex;
 
-        button {
-            font-size: 1.6rem;
-            margin: 0 5px;
-            background-color: var(--color-gray);
-            color: white;
-            padding: 7px 15px;
-            height: 30px;
-            transition: all 0.2s;
-            &:hover {
-                background-color: var(--primary);
-                box-shadow: 3px 3px 5px #777;
-            }
-            cursor: pointer;
-        }
-        .active {
-            background-color: var(--primary);
-        }
-    }
     select{
-        padding: 0 15px;
+        margin-top: 30px;
+        padding: 15px 30px;
         font-size:1.6rem;
         border-radius: 7rem;
     }
