--- a/src/globalStyles/globalStyle.scss
+++ b/src/globalStyles/globalStyle.scss
@@ -71,9 +71,9 @@ a[href] {
 textarea{
     font:inherit
 }
-a[href]:hover{
-    color: black;
-}
+// a[href]:hover{
+//     color: black;
+// }
 ul{
     list-style: none;
 }
