--- a/src/Component/page/myOrder/myOrder.module.scss
+++ b/src/Component/page/myOrder/myOrder.module.scss
@@ -13,9 +13,22 @@
         border-radius: 7px;
         padding: 3px 7px;
         margin-bottom: 10px;
+        font-size: 1.8rem;
     }
     .contain-select{
         display: flex;
         justify-content: flex-end;
+    }
+    .table-item{
+        width: 90%;
+        margin: auto;
+        border-collapse: collapse;
+        
+    }
+    th,td{
+        border-bottom: 1px solid #999;
+        border-collapse: collapse;
+        text-align: center;
+        padding: 3px 0;
     }
 }
